Fixed loading tile on offer specifications, included timeout for phonegap loader.

--- a/src/main/webapp/resources/sass/_offer-specifications.scss
+++ b/src/main/webapp/resources/sass/_offer-specifications.scss
@@ -536,3 +536,10 @@ div#offerPositiveFeedback {
     }
   }
 }
+
+.offer-specifications__loading{
+  position: absolute;
+  margin-left: -1em;
+  margin-top: 2em;
+  left: 50%;
+}
